--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<p>this in new local repo</p>
-<p>New feature added </p>ls
-<p>format is given in the document</p>
+<!DOCTYPE html>
+<html>
+<head>
+<title>
+First Web Page
+</title>
+</head>
+<body>
+Hello World!
+</body>
+</html>
